Created the skills page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About | Dezven Indiana</title>
+    <title>About | Suril Pokharel</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <script defer src="script.js"></script>
   </head>
@@ -67,7 +67,7 @@
 
     <!-- Footer -->
     <footer class="bg-white shadow-inner p-4 text-center text-sm mt-auto">
-      <p>&copy; 2025 Dezven Indiana. All rights reserved.</p>
+      <p>&copy; 2025 Suril Pokharel. All rights reserved.</p>
     </footer>
 
   </body>
