--- a/skills.html
+++ b/skills.html
@@ -66,21 +66,27 @@
           <div class="p-6 border-t-4 border-red-500 bg-white rounded-lg shadow hover:shadow-lg transition">
             <h3 class="text-xl font-bold text-gray-900 mb-2">Todo List App</h3>
             <p class="text-gray-600 mb-2">A productivity app to manage your daily tasks.</p>
-            <span class="inline-block px-3 py-1 text-sm bg-green-100 text-green-700 rounded-full">Completed</span>
+            <span class="inline-flex items-center gap-1 px-3 py-1 text-sm bg-green-100 text-green-700 rounded-full">
+              ✅ Completed
+            </span>
           </div>
 
           <!-- Weather App -->
           <div class="p-6 border-t-4 border-red-500 bg-white rounded-lg shadow hover:shadow-lg transition">
             <h3 class="text-xl font-bold text-gray-900 mb-2">Weather App</h3>
             <p class="text-gray-600 mb-2">A real-time weather forecast app using external APIs.</p>
-            <span class="inline-block px-3 py-1 text-sm bg-green-100 text-green-700 rounded-full">Completed</span>
+            <span class="inline-flex items-center gap-1 px-3 py-1 text-sm bg-green-100 text-green-700 rounded-full">
+              ✅ Completed
+            </span>
           </div>
 
           <!-- Waste Management -->
           <div class="p-6 border-t-4 border-red-500 bg-white rounded-lg shadow hover:shadow-lg transition">
             <h3 class="text-xl font-bold text-gray-900 mb-2">Waste Management System</h3>
             <p class="text-gray-600 mb-2">A smart solution for tracking and managing waste disposal.</p>
-            <span class="inline-block px-3 py-1 text-sm bg-yellow-100 text-yellow-800 rounded-full">Ongoing</span>
+            <span class="inline-flex items-center gap-1 px-3 py-1 text-sm bg-yellow-100 text-yellow-800 rounded-full">
+              🔄 Ongoing
+            </span>
           </div>
 
         </div>
