--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <!-- About Image -->
         <div class="relative">
           <div class="w-64 h-64 mx-auto rounded-full overflow-hidden border-8 border-red-500 shadow-lg">
-            <img src="img/profile.jpg" alt="About Image" class="w-full h-full object-cover" />
+            <img src="img/profile.png" alt="About Image" class="w-full h-full object-cover" />
           </div>
         </div>
 
