--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <!-- Profile Image -->
         <div class="relative">
           <div class="relative w-64 h-64 mx-auto rounded-full overflow-hidden border-8 border-red-500 shadow-lg">
-            <img src="img/profile.jpg" alt="Profile Image" class="object-cover w-full h-full" />
+            <img src="img/profile.png" alt="Profile Image" class="object-cover w-full h-full" />
           </div>
         </div>
       </div>
