--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     <header class="shadow-md bg-white">
       <div class="max-w-7xl mx-auto p-4 flex justify-between items-center">
         <a href="index.html">
-          <img src="../img/logo.html" alt="Logo" class="h-10 w-auto" />
+          <img src="img/logo.png" alt="Logo" class="h-10 w-auto" />
         </a>
         <div class="md:hidden">
           <button id="menu-btn" class="text-gray-800 focus:outline-none text-2xl">&#9776;</button>
